# rustmpc

./: .gitignore  Cargo.toml  Cross.toml  README.md
demo/src/: cli.rs  main.rs
demo/src/dkg/: rounds.rs
gg18-multi-party-ecdsa/: .gitignore  Cargo.toml
gg18-multi-party-ecdsa-ffi/: Cargo.toml  binding.h  build.rs
gg18-multi-party-ecdsa-ffi/src/: lib.rs
gg18-multi-party-ecdsa/examples/: gg18_mobile.rs
gg18-multi-party-ecdsa/src/: api.rs  bridge_generated.rs  cli.rs  lib.rs  main.rs
gg18-multi-party-ecdsa/src/common/: mod.rs  party_i.rs
gg18-multi-party-ecdsa/src/dkg/: keygen.rs  rounds.rs
gg18-multi-party-ecdsa/src/signing/: rounds.rs  sign.rs
gg18-multi-party-ecdsa/src/utilities/mta/: mod.rs
gg20-mpc/: .gitignore  Cargo.toml
gg20-mpc-ffi/: Cargo.toml  binding.h  build.rs
gg20-mpc-ffi/src/: lib.rs
gg20-mpc/examples/: gg20_sm_manager.rs  keygen_test1.rs  keygen_test2.rs  keygen_test3.rs  local-key1.json  presign_test1.rs  presign_test2.rs
gg20-mpc/src/: gg20_sm_manager.rs  lib.rs
gg20-mpc/src/common/: mod.rs  party_i.rs
gg20-mpc/src/dkg/: keygen.rs  rounds.rs
gg20-mpc/src/presigning/: mod.rs  presign.rs  rounds.rs
gg20-mpc/src/utilities/mta/: mod.rs
gg20-multi-party-ecdsa/: Cargo.toml
gg20-multi-party-ecdsa/src/: cli.rs  gg20_sm_client.rs  main.rs
gg20-multi-party-ecdsa/src/common/: party_i.rs
gg20-multi-party-ecdsa/src/dkg/: mod.rs
gg20-multi-party-ecdsa/src/presigning/: rounds.rs
gg20-multi-party-ecdsa/src/signing/: mod.rs  rounds.rs  sign.rs
gg20-multi-party-ecdsa/src/zk_pdl_with_slack/: test.rs
mpc-over-signal/examples/: login.rs  ping-pong.rs
mpc-over-signal/src/device/: device_store.rs
outputs/: workspace.code-workspace
result/: ffi.dart
