[package]
name = "gg18_mpc_ecdsa_ffi"
version = "0.1.0"
authors = ["Erwin Mochtar Wijaya <erwin.wijaya@coinbit.id>"]
edition = "2018"

[lib]
name = "gg18_mpc_ecdsa_ffi"
crate-type = ["rlib"]

[dependencies]
gg18-multi-party-ecdsa = { path = "../gg18-multi-party-ecdsa" }
tokio = { version = "0.2", features = ["rt-threaded", "blocking"] }
ffi_helpers = "0.2"
allo-isolate = "0.1.6"
lazy_static = "1.4"
flutter_rust_bridge = "1"

[build-dependencies]
cbindgen = "0.14.3"
dart-bindgen = "0.1.0"