[package]
name = "gg18_mpc_ecdsa_ffi"
version = "0.1.0"
authors = ["Erwin Mochtar Wijaya <erwin.wijaya@coinbit.id>"]
edition = "2018"

[lib]
name = "gg18_mpc_ecdsa_ffi"
crate-type = ["rlib", "staticlib", "dylib"]

[dependencies]
gg18-multi-party-ecdsa = { path = "../gg18-multi-party-ecdsa" }
allo-isolate = "0.1.6"
async-ffi = "0.4.0"

[build-dependencies]
cbindgen = "0.14.3"
dart-bindgen = "0.1.0"