[package]
name = "gg18-multi-party-ecdsa"
version = "0.1.0"
authors = ["Denis <dsurv@yandex.ru>"]
edition = "2018"

[features]
default = ["curv-kzen/num-bigint"]
cclst = ["class_group"]

[dependencies]
round-based = "0.1.1"
mpc-over-signal = { path = "../mpc-over-signal" }

actix = "0.11.0-beta.2"
awc = { version = "3.0.0-beta.2", features = ["rustls"] }
tokio = { version = "1", features = ["fs", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = "0.2"
futures = "0.3"
rustls = "0.19"

rand = "0.7"

anyhow = "1"
structopt = "0.3"

qr2term = "0.2"

base64 = "0.13"
hex = "0.4"
serde_json = "1"

############TECDSA###################
subtle = { version = "2" }
serde = { version = "1.0", features = ["derive"] }
zeroize = "1"
thiserror = "1.0.23"
derivative = "2"
sha2 = "0.9"
async-sse = "5"

curv-kzen = { version = "0.9.0", default-features = false }
centipede = { version = "0.3", default-features = false }
zk-paillier = { version = "0.4.2", default-features = false }
secp256k1 = "0.20.3"

[dependencies.paillier]
version = "0.4.2"
package = "kzen-paillier"
default-features = false

[dependencies.class_group]
version = "0.4"
default-features = false
optional = true