[package]
name = "gg20-mpc"
version = "0.1.0"
authors = ["Denis <dsurv@yandex.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["curv-kzen/num-bigint"]
cclst = ["class_group"]
alpha-rays-fix = []
presign-test = []

[dependencies]
round-based =  { path = "../round-based-protocol" }

actix = "0.11.0-beta.2"
awc = { version = "3.0.0-beta.2", features = ["rustls"] }
tokio = { version = "1", features = ["fs"] }
tracing = "0.1"
tracing-subscriber = "0.2"
futures = "0.3"
rustls = "0.19"

rand = "0.7"

anyhow = "1"
structopt = "0.3"

qr2term = "0.2"

base64 = "0.13"
hex = "0.4"
serde_json = "1"
surf = "2"
rocket = { version = "0.5.0-rc.1", default-features = false, features = ["json"] }
allo-isolate = "0.1.6"
############TECDSA###################
subtle = { version = "2" }
serde = { version = "1.0", features = ["derive"] }
zeroize = "1"
thiserror = "1.0.23"
derivative = "2"
sha2 = "0.9"
async-sse = "5"

curv-kzen = { version = "0.9.0", default-features = false }
centipede = { version = "0.3", default-features = false }
zk-paillier = { version = "0.4.2", default-features = false }

[dependencies.paillier]
version = "0.4.2"
package = "kzen-paillier"
default-features = false

[dependencies.class_group]
version = "0.4"
default-features = false
optional = true